--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,12 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="66a265">  <td>23/04/05 10:59:36</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Utils.defaultTimeOut()[pri:0, instance:appium.realTimeEcomApp.AndroidBasics@7adda9cc]">&gt;&gt;defaultTimeOut</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1790585734</td>   <td></td> </tr>
-<tr bgcolor="66a265">  <td>23/04/05 10:59:31</td>   <td>-5391</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Utils.ConfigureAppium()[pri:0, instance:appium.realTimeEcomApp.AndroidBasics@7adda9cc]">&gt;&gt;ConfigureAppium</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1790585734</td>   <td></td> </tr>
-<tr bgcolor="6a82c4">  <td>23/04/05 10:59:41</td>   <td>4958</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AndroidBasics.fillForm()[pri:2, instance:appium.realTimeEcomApp.AndroidBasics@7adda9cc]">fillForm</td> 
-  <td>main@1790585734</td>   <td></td> </tr>
-<tr bgcolor="6a82c4">  <td>23/04/05 10:59:36</td>   <td>13</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AndroidBasics.toastError()[pri:1, instance:appium.realTimeEcomApp.AndroidBasics@7adda9cc]">toastError</td> 
-  <td>main@1790585734</td>   <td></td> </tr>
+<tr bgcolor="6a82c4">  <td>23/04/05 11:48:20</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Utils.ConfigureAppium()[pri:0, instance:appium.realTimeEcomApp.ProductList@4b14c583]">&gt;&gt;ConfigureAppium</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1202683709</td>   <td></td> </tr>
+<tr bgcolor="8c72c2">  <td>23/04/05 11:48:25</td>   <td>4208</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ProductList.fillForm()[pri:2, instance:appium.realTimeEcomApp.ProductList@4b14c583]">fillForm</td> 
+  <td>main@1202683709</td>   <td></td> </tr>
+<tr bgcolor="6a82c4">  <td>23/04/05 11:48:25</td>   <td>4194</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Utils.defaultTimeOut()[pri:0, instance:appium.realTimeEcomApp.ProductList@4b14c583]">&gt;&gt;defaultTimeOut</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1202683709</td>   <td></td> </tr>
 </table>
