Righ product was added to the cart

--- a/test-output/old/Default suite/classes.html
+++ b/test-output/old/Default suite/classes.html
@@ -11,7 +11,11 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>fillForm</td>
+<td>addProductToCart</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>completePurchase</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
