--- a/test-output/index.html
+++ b/test-output/index.html
@@ -93,7 +93,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">1 method,   1 passed</span>
+                    <span class="method-stats">2 methods,   2 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -104,7 +104,12 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="appium.realTimeEcomApp.ProductList" class="method navigator-link" hash-for-method="fillForm">fillForm</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="appium.realTimeEcomApp.ProductList" class="method navigator-link" hash-for-method="addProductToCart">addProductToCart</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="appium.realTimeEcomApp.ProductList" class="method navigator-link" hash-for-method="completePurchase">completePurchase</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -127,9 +132,16 @@
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="fillForm">
-                  </a> <!-- fillForm -->
-                  <span class="method-name">fillForm</span>
+                  <a name="addProductToCart">
+                  </a> <!-- addProductToCart -->
+                  <span class="method-name">addProductToCart</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="completePurchase">
+                  </a> <!-- completePurchase -->
+                  <span class="method-name">completePurchase</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -137,7 +149,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">/private/var/folders/dh/6xd6gvbn6_99xm3npplyzmz40000gn/T/testng-eclipse-1177826645/testng-customsuite.xml</span>
+            <span class="header-content">/private/var/folders/dh/6xd6gvbn6_99xm3npplyzmz40000gn/T/testng-eclipse-1438075298/testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -146,11 +158,7 @@
 &lt;suite name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;appium.realTimeEcomApp.ProductList&quot;&gt;
-        &lt;methods&gt;
-          &lt;include name=&quot;fillForm&quot;/&gt;
-        &lt;/methods&gt;
-      &lt;/class&gt; &lt;!-- appium.realTimeEcomApp.ProductList --&gt;
+      &lt;class name=&quot;appium.realTimeEcomApp.ProductList&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -190,16 +198,20 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(1);
+data.addRows(2);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'fillForm')
+data.setCell(0, 1, 'addProductToCart')
 data.setCell(0, 2, 'appium.realTimeEcomApp.ProductList')
-data.setCell(0, 3, 17031);
+data.setCell(0, 3, 16637);
+data.setCell(1, 0, 1)
+data.setCell(1, 1, 'completePurchase')
+data.setCell(1, 2, 'appium.realTimeEcomApp.ProductList')
+data.setCell(1, 3, 101);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 17 seconds</span>
+              <span class="suite-total-time">Total running time: 16 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -232,11 +244,15 @@ return data;
               </div> <!-- configuration-class before -->
               <div class="configuration-class before">
                 <span class="method-name">defaultTimeOut</span>
-                <span class="method-start">4195 ms</span>
+                <span class="method-start">4273 ms</span>
               </div> <!-- configuration-class before -->
               <div class="test-method">
-                <span class="method-name">fillForm</span>
-                <span class="method-start">4209 ms</span>
+                <span class="method-name">addProductToCart</span>
+                <span class="method-start">4287 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">completePurchase</span>
+                <span class="method-start">20931 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
