--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,10 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="6a82c4">  <td>23/04/05 11:48:20</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Utils.ConfigureAppium()[pri:0, instance:appium.realTimeEcomApp.ProductList@4b14c583]">&gt;&gt;ConfigureAppium</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1202683709</td>   <td></td> </tr>
-<tr bgcolor="6a82c4">  <td>23/04/05 11:48:25</td>   <td>4194</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Utils.defaultTimeOut()[pri:0, instance:appium.realTimeEcomApp.ProductList@4b14c583]">&gt;&gt;defaultTimeOut</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1202683709</td>   <td></td> </tr>
-<tr bgcolor="8c72c2">  <td>23/04/05 11:48:25</td>   <td>4208</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ProductList.fillForm()[pri:2, instance:appium.realTimeEcomApp.ProductList@4b14c583]">fillForm</td> 
-  <td>main@1202683709</td>   <td></td> </tr>
+<tr bgcolor="66a265">  <td>23/04/05 13:43:55</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Utils.ConfigureAppium()[pri:0, instance:appium.realTimeEcomApp.ProductList@433d61fb]">&gt;&gt;ConfigureAppium</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1961173763</td>   <td></td> </tr>
+<tr bgcolor="6a82c4">  <td>23/04/05 13:44:00</td>   <td>4285</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ProductList.addProductToCart()[pri:1, instance:appium.realTimeEcomApp.ProductList@433d61fb]">addProductToCart</td> 
+  <td>main@1961173763</td>   <td></td> </tr>
+<tr bgcolor="6a82c4">  <td>23/04/05 13:44:16</td>   <td>20929</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ProductList.completePurchase()[pri:2, instance:appium.realTimeEcomApp.ProductList@433d61fb]">completePurchase</td> 
+  <td>main@1961173763</td>   <td></td> </tr>
+<tr bgcolor="66a265">  <td>23/04/05 13:44:00</td>   <td>4272</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Utils.defaultTimeOut()[pri:0, instance:appium.realTimeEcomApp.ProductList@433d61fb]">&gt;&gt;defaultTimeOut</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1961173763</td>   <td></td> </tr>
 </table>
