--- a/test-output/index.html
+++ b/test-output/index.html
@@ -93,7 +93,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">2 methods,   2 passed</span>
+                    <span class="method-stats">1 method,   1 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -104,12 +104,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="appium.realTimeEcomApp.ProductList" class="method navigator-link" hash-for-method="addProductToCart">addProductToCart</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="appium.realTimeEcomApp.ProductList" class="method navigator-link" hash-for-method="completePurchase">completePurchase</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="appium.realTimeEcomApp.CalculateCart" class="method navigator-link" hash-for-method="addProductToCart">addProductToCart</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -127,7 +122,7 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">appium.realTimeEcomApp.ProductList</span>
+              <span class="class-name">appium.realTimeEcomApp.CalculateCart</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
@@ -137,19 +132,12 @@
                   <span class="method-name">addProductToCart</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="completePurchase">
-                  </a> <!-- completePurchase -->
-                  <span class="method-name">completePurchase</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
           </div> <!-- suite-Default_suite-class-passed -->
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">/private/var/folders/dh/6xd6gvbn6_99xm3npplyzmz40000gn/T/testng-eclipse-1438075298/testng-customsuite.xml</span>
+            <span class="header-content">/private/var/folders/dh/6xd6gvbn6_99xm3npplyzmz40000gn/T/testng-eclipse-1853109326/testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -158,7 +146,11 @@
 &lt;suite name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;appium.realTimeEcomApp.ProductList&quot;/&gt;
+      &lt;class name=&quot;appium.realTimeEcomApp.CalculateCart&quot;&gt;
+        &lt;methods&gt;
+          &lt;include name=&quot;addProductToCart&quot;/&gt;
+        &lt;/methods&gt;
+      &lt;/class&gt; &lt;!-- appium.realTimeEcomApp.CalculateCart --&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -198,20 +190,16 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(2);
+data.addRows(1);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'addProductToCart')
-data.setCell(0, 2, 'appium.realTimeEcomApp.ProductList')
-data.setCell(0, 3, 16637);
-data.setCell(1, 0, 1)
-data.setCell(1, 1, 'completePurchase')
-data.setCell(1, 2, 'appium.realTimeEcomApp.ProductList')
-data.setCell(1, 3, 101);
+data.setCell(0, 2, 'appium.realTimeEcomApp.CalculateCart')
+data.setCell(0, 3, 17702);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 16 seconds</span>
+              <span class="suite-total-time">Total running time: 17 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -237,22 +225,18 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">appium.realTimeEcomApp.ProductList</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">appium.realTimeEcomApp.CalculateCart</div> <!-- chronological-class-name -->
               <div class="configuration-class before">
                 <span class="method-name">ConfigureAppium</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-class before -->
               <div class="configuration-class before">
                 <span class="method-name">defaultTimeOut</span>
-                <span class="method-start">4273 ms</span>
+                <span class="method-start">4236 ms</span>
               </div> <!-- configuration-class before -->
               <div class="test-method">
                 <span class="method-name">addProductToCart</span>
-                <span class="method-start">4287 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">completePurchase</span>
-                <span class="method-start">20931 ms</span>
+                <span class="method-start">4250 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
