Shopping cart tests

--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,10 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="8c72c2">  <td>23/04/05 15:15:23</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CalculateCart.addProductToCart()[pri:1, instance:appium.realTimeEcomApp.CalculateCart@65466a6a]">addProductToCart</td> 
-  <td>main@2087885397</td>   <td></td> </tr>
-<tr bgcolor="6a82c4">  <td>23/04/05 15:15:19</td>   <td>-4249</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Utils.ConfigureAppium()[pri:0, instance:appium.realTimeEcomApp.CalculateCart@65466a6a]">&gt;&gt;ConfigureAppium</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2087885397</td>   <td></td> </tr>
-<tr bgcolor="6a82c4">  <td>23/04/05 15:15:23</td>   <td>-14</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Utils.defaultTimeOut()[pri:0, instance:appium.realTimeEcomApp.CalculateCart@65466a6a]">&gt;&gt;defaultTimeOut</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2087885397</td>   <td></td> </tr>
+<tr bgcolor="6a82c4">  <td>23/04/06 10:39:50</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CalculateCart.addProductToCart()[pri:1, instance:appium.realTimeEcomApp.CalculateCart@5cee5251]">addProductToCart</td> 
+  <td>main@22600334</td>   <td></td> </tr>
+<tr bgcolor="6a82c4">  <td>23/04/06 10:40:10</td>   <td>19527</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CalculateCart.termsConditions()[pri:2, instance:appium.realTimeEcomApp.CalculateCart@5cee5251]">termsConditions</td> 
+  <td>main@22600334</td>   <td></td> </tr>
+<tr bgcolor="66a265">  <td>23/04/06 10:39:44</td>   <td>-6404</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Utils.ConfigureAppium()[pri:0, instance:appium.realTimeEcomApp.CalculateCart@5cee5251]">&gt;&gt;ConfigureAppium</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@22600334</td>   <td></td> </tr>
+<tr bgcolor="66a265">  <td>23/04/06 10:39:50</td>   <td>-17</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Utils.defaultTimeOut()[pri:0, instance:appium.realTimeEcomApp.CalculateCart@5cee5251]">&gt;&gt;defaultTimeOut</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@22600334</td>   <td></td> </tr>
 </table>
