--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,14 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="66a265">  <td>23/04/06 17:06:31</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Utils.ConfigureAppium()[pri:0, instance:appium.realTimeEcomApp.CalculateCart@5c909414]">&gt;&gt;ConfigureAppium</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1202683709</td>   <td></td> </tr>
-<tr bgcolor="6a82c4">  <td>23/04/06 17:06:37</td>   <td>5626</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CalculateCart.addProductToCart()[pri:1, instance:appium.realTimeEcomApp.CalculateCart@5c909414]">addProductToCart</td> 
-  <td>main@1202683709</td>   <td></td> </tr>
-<tr bgcolor="66a265">  <td>23/04/06 17:06:37</td>   <td>5611</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Utils.defaultTimeOut()[pri:0, instance:appium.realTimeEcomApp.CalculateCart@5c909414]">&gt;&gt;defaultTimeOut</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1202683709</td>   <td></td> </tr>
-<tr bgcolor="6a82c4">  <td>23/04/06 17:07:01</td>   <td>29984</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CalculateCart.hybridActions()[pri:3, instance:appium.realTimeEcomApp.CalculateCart@5c909414]">hybridActions</td> 
-  <td>main@1202683709</td>   <td></td> </tr>
-<tr bgcolor="6a82c4">  <td>23/04/06 17:06:57</td>   <td>26096</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CalculateCart.termsConditions()[pri:2, instance:appium.realTimeEcomApp.CalculateCart@5c909414]">termsConditions</td> 
-  <td>main@1202683709</td>   <td></td> </tr>
+<tr bgcolor="6a82c4">  <td>23/04/10 13:01:17</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BrowserCapabilities.ConfigureAppium()[pri:0, instance:appium.realTimeEcomApp.MobileBrowsertests@3cc2931c]">&gt;&gt;ConfigureAppium</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@440737101</td>   <td></td> </tr>
+<tr bgcolor="68b9a4">  <td>23/04/10 13:01:23</td>   <td>5932</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="MobileBrowsertests.browserTests()[pri:0, instance:appium.realTimeEcomApp.MobileBrowsertests@3cc2931c]">browserTests</td> 
+  <td>main@440737101</td>   <td></td> </tr>
+<tr bgcolor="6a82c4">  <td>23/04/10 13:01:23</td>   <td>5909</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BrowserCapabilities.defaultTimeOut()[pri:0, instance:appium.realTimeEcomApp.MobileBrowsertests@3cc2931c]">&gt;&gt;defaultTimeOut</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@440737101</td>   <td></td> </tr>
 </table>
